--- a/bio_health.html
+++ b/bio_health.html
@@ -118,6 +118,8 @@ We have applied some of these models in the medical domain, e.g. for <a href="ht
 							
 <p><a href="eva.html">Eva Sousa</a>'s PhD project applied deep learning to image recognition from PET scans. <br/><br/></p>		
 
+<p><a href="luana.html">Luana Mincarelli</a>'s PhD project explores how different stress compounds act in the environment, with particular attention to biological responses in different aquatic species.<br/><br/></p>		
+
 <p>Alex Turner's <a href="http://gow.epsrc.ac.uk/NGBOViewGrant.aspx?GrantRef=EP/S003207/1">EPSRC First Grant</a> applies epigenetic networks to modelling human visceral leismaniasis. <br/><br/></p>	
 
 												
