--- a/bio_health.html
+++ b/bio_health.html
@@ -169,6 +169,17 @@ We have applied some of these models in the medical domain, e.g. for <a href="ht
 						
 						<!-- single post -->
 						<div class="widget-post">
+							<a href="news-catapult-joyjit-2018.html">
+								<img src="./img/catapult-post.jpg" alt=""> OREC Catapult in Glasgow
+							</a>
+							<ul class="blog-meta">
+								<li>22 Nov 2018</li>
+							</ul>
+						</div>
+						<!-- /single post -->						
+						
+						<!-- single post -->
+						<div class="widget-post">
 							<a href="./img/xmas-2018.jpg">
 								<img src="./img/xmas-post.jpg" alt=""> Christmas poster workshop and lunch
 							</a>
