--- a/bio_health.html
+++ b/bio_health.html
@@ -384,7 +384,7 @@ the same distinguishing features across documents as the linguistic analysis.
 								</abstract>
 							</ul>
 							<ul class="blog-meta">
-								<li>2019. In Proceedings of the Tenth International Workshop on Health Text Mining and Information Analysis (LOUHI 2019). Hong Kong.</li>
+								<li>2019. In Proceedings of the Tenth International Workshop on Health Text Mining and Information Analysis (LOUHI 2019)  at EMNLP. Hong Kong.</li>
 							</ul>
 							<!-- blog tags -->
 							<div class="blog-tags">
